k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: aiml
  name: aiml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aiml
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: aiml
    spec:
      containers:
      - image:  bala2805/bala:latest
        resources:
          requests:
            memory: "500Mi"
            cpu: "700m"
          limits:
            memory: "1Gi"
            cpu: "950m"
        name: aiml-api
        ports:
        - containerPort: 7000
          #imagePullPolicy: IfNotPresent
