k8s/clusterip.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aiml-model
  name: aiml-model
spec:
  ports:
  - port: 7000
    protocol: TCP
    targetPort: 7000
  selector:
    app: aiml
