k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: aiml
  name: aiml
spec:
  ports:
  - port: 7000
    protocol: TCP
    targetPort: 7000
  selector:
    app: aiml
  type: LoadBalancer
status:
  loadBalancer: {}
